# dashboard-os

src/: .qmlls.ini  CMakeLists.txt  Model.cpp  Model.h  main.cpp
src/.cache/clangd/index/: Collector.h.269C25EDC553A4BF.idx  Model.cpp.D557A94E36A23266.idx  Model.h.40A60D39C638024B.idx  Model.h.A91B3CAE686699A5.idx  Processor.h.184BC5ACC3A0F401.idx  View.h.C43749E71B129524.idx  main.cpp.20D83D2CB4433E6E.idx  model_common.h.91E4BC2FFF88A561.idx
src/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/.qt/deploy_qml_imports/: dashboard.cmake
src/.qt/qml_imports/: dashboard_build.rsp  dashboard_conf.rsp
src/.qt/rcc/: qml_resources.qrc  qrc_qml_resources.cpp
src/modules/controller/: Controller.h
src/modules/model/: Model.cpp  Model.h  Model_corrected.cpp  model_common.h
src/modules/model/threads/: Collector.cpp  Collector.h  Processor.cpp  Processor.h
src/modules/view/: View.cpp  View.h
src/qml/: CpuUsageChart.qml  FilesystemBrowser.qml  Main.qml  MemoryUsageGraph.qml  PartitionOverview.qml  ProcessDetails.qml  ProcessTable.qml  SystemOverview.qml
src/tests/qtCPUgraph/: main.cpp
src/tests/qtCPUgraph/.cache/clangd/index/: main.moc.8D8D0D85AD6BCB11.idx
src/tests/qtTest/: Makefile  compile_commands.json  dashboard  dashboard.pro  main.cpp  main.moc
src/tests/qtTest/.cache/clangd/index/: main.cpp.9211F02978EBA584.idx  main.moc.6933F1485A6777EB.idx
tests/: cpuinfo_process_read.c  proc_dir_read_test.cpp  read_important_info_test.cpp
tests/qtCPUgraph/: Makefile  compile_commands.json
tests/qtCPUgraph/.cache/clangd/index/: main.cpp.15DB288878944C6A.idx
tests/qtTest/: Makefile  compile_commands.json  dashboard  main.cpp  main.moc
tests/qtTest/.cache/clangd/index/: main.cpp.425F6FBF9BFEA478.idx  main.cpp.9211F02978EBA584.idx  main.moc.6A48C23B3F8E15BB.idx
view/: CMakeLists.txt  resources.qrc
view/qml/: Main.qml  NavigationBar.qml  PerformanceGraphs.qml  ProcessTable.qml  StorageTable.qml
view/src/: main.cpp  processmodel.cpp  processmodel.h
viewTest/: .qmlls.ini  CMakeLists.txt  back.cpp  back.h  main.cpp.txt
viewTest/.cache/clangd/index/: back.cpp.C893F1CCB37799B2.idx  back.h.1D4D766284697E05.idx  main.cpp.129892168D783B5E.idx
viewTest/test/: Main.qml  NavigationBar.qml  PerformanceGraphs.qml  ProcessTable.qml  StorageList.qml  test.qml
viewTest/test/graph/: CMakeLists.txt  main.cpp
